@@ -1,7 +1,7 @@
 package App::Doh::Model::Posts;
 
 use App::Doh::Attributes;  # Will do cleaning
-use App::Doh::Functions    qw( build_tree iterator localise_tree mtime );
+use App::Doh::Util         qw( build_tree iterator localise_tree mtime );
 use Class::Usul::Constants qw( TRUE );
 use Moo;
 
